tests/baselines/reference/ParameterList8.errors.txt
==== tests/cases/compiler/ParameterList8.ts (3 errors) ====
    declare class C2 {
     constructor(public p1:string); // ERROR
                 ~~~~~~
!!! ParameterList8.ts(2,14): error TS2246: A parameter property is only allowed in a constructor implementation.
     constructor(private p2:number); // ERROR
                 ~~~~~~~
!!! ParameterList8.ts(3,14): error TS2246: A parameter property is only allowed in a constructor implementation.
     constructor(public p3:any); // ERROR
                 ~~~~~~
!!! ParameterList8.ts(4,14): error TS2246: A parameter property is only allowed in a constructor implementation.
    }